Interim.  Passed over description of optimization framework and parameters.

--- a/framework.tex
+++ b/framework.tex
@@ -81,7 +81,7 @@ Table \ref{tab:par_setting} lists the set of parameters in our framework.  Using
         nServers & = & dcCapacity / (serverPow + switchPow / servsSwitch)\\
         nSwitches & = & nServers / servsSwitch\\
         dcNetCost & = & nServers \cdot pNBWServ \\
-        dcEnergyCost & = & \sum_{t \in T} {|t| \cdot powNeed(t) \cdost PUE(t) \cdot pEnergy(d) } \\
+        dcEnergyCost & = & \sum_{t \in T} {|t| \cdot powNeed(t) \cdot PUE(t) \cdot pEnergy(d) } \\
  	wfCost & = & wfCAPEX - wfRev  \\
         wfCAPEX & = & wfLandCost + wfBuildCost \\
         wfLandCost & = & pLand(w) \cdot wfArea \cdot wfCapacity \\
