correct some typos, add a reference of line building cost

--- a/paper.bib
+++ b/paper.bib
@@ -1,3 +1,10 @@
+@article{interconnection2010survey,
+  title={A survey of transmission cost allocation issues, methods and practices},
+  author={Interconnection, PJM},
+  journal={Valley Forge},
+  year={2010}
+}
+
 @inproceedings{de2014investigation,
   title={Investigation of grid loss reduction under closed-ring operation of MV distribution grids},
   author={de Groot, RJW and Morren, J and Slootweg, JG},
@@ -33,7 +40,7 @@ year = {2014}
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {data center, dynamic pricing, load balancing, smart grid},
-} 
+}
 
 
 @article{ghatikar2014demand,
@@ -42,16 +49,16 @@ year = {2014}
   year={2014}
 }
 
-@ARTICLE{aman2012ITPD, 
-author={Amanulla, B. and Chakrabarti, S. and Singh, S.N.}, 
-journal={Power Delivery, IEEE Transactions on}, 
-title={Reconfiguration of Power Distribution Systems Considering Reliability and Power Loss}, 
-year={2012}, 
-month={April}, 
-volume={27}, 
-number={2}, 
-pages={918-926}, 
-doi={10.1109/TPWRD.2011.2179950}, 
+@ARTICLE{aman2012ITPD,
+author={Amanulla, B. and Chakrabarti, S. and Singh, S.N.},
+journal={Power Delivery, IEEE Transactions on},
+title={Reconfiguration of Power Distribution Systems Considering Reliability and Power Loss},
+year={2012},
+month={April},
+volume={27},
+number={2},
+pages={918-926},
+doi={10.1109/TPWRD.2011.2179950},
 ISSN={0885-8977},}
 
 
@@ -269,14 +276,14 @@ ISSN={0885-8977},}
 	title = "{Renewable and Cooling Aware Workload Management for Sustainable Data Centers}",
 	booktitle = {SIGMETRICS},
 	year = {2012}
-} 
+}
 
 @inproceedings{Turner06,
 	author = {Turner W. P. and Seader J. H.},
 	title = "{Dollars per KW Plus Dollars per Square Foot are a Better Data Center Cost Model than Dollars per Square Foot Alone}",
 	booktitle = {Uptime Institute},
 	year = {2006}
-} 
+}
 
 @inproceedings{Stansberr06,
 	author = {M. Stansberr},
@@ -302,7 +309,7 @@ ISSN={0885-8977},}
 
 @book{BarrosoH09,
 	author    = {Luiz Andr{\'e} Barroso and Urs H{\"o}lzle},
-	title     = "{The Datacenter as a Computer: An Introduction to the 
+	title     = "{The Datacenter as a Computer: An Introduction to the
 Design of Warehouse-Scale Machines}",
 	year      = {2009},
 }
@@ -333,12 +340,12 @@ and Data Averaging}",
 }
 
 @article{King_Boyson_Kratochvil_2004,
-	title={PHOTOVOLTAIC ARRAY PERFORMANCE MODEL}, 
-	volume={8}, 
-	number={November}, 
-	journal={System}, 
-	publisher={United States. Dept. of Energy}, 
-	author={King, D L and Boyson, W E and Kratochvil, J A}, 
+	title={PHOTOVOLTAIC ARRAY PERFORMANCE MODEL},
+	volume={8},
+	number={November},
+	journal={System},
+	publisher={United States. Dept. of Energy},
+	author={King, D L and Boyson, W E and Kratochvil, J A},
 	year={2004},
 }
 
