--- a/paper.tex
+++ b/paper.tex
@@ -32,6 +32,7 @@
 \newcommand{\xynote}[1]{{\textcolor{orange}{XW: #1}}}
 \newcommand{\mdnote}[1]{{\textcolor{darkgreen}{Md: #1}}}
 \newcommand{\ricardonote}[1]{{\textcolor{red}{Ricardo: #1}}}
+\newcommand{\divyanote}[1]{{\textcolor{violet}{Divya: #1}}}
 
 \newcommand{\myparagraph}[1]{\noindent {\bf #1}}
 
@@ -40,11 +41,11 @@
 %   {\begin{list}{$\bullet$}%
 %      {\topsep=0in\itemsep=0in\parsep=0in\partopsep=0in}%
 %    }{\end{list}}
-   
+
 \begin{document}
 
 \title{Grid-Aware Placement of Datacenters\\and Wind Farms
-% \thanks{This work was partially supported by NSF grant XXX-YYYYYY %CSR-1117368 
+% \thanks{This work was partially supported by NSF grant XXX-YYYYYY %CSR-1117368
 % and the Rutgers Green Computing Initiative.}
 %\vspace{-0.3in}
 }
@@ -75,7 +76,7 @@
 
 % \IEEEpubid{978‐1‐4799‐0623‐9/13/\$31.00~\copyright~2013 IEEE}
 % \IEEEpubid{978‐1‐4799‐0623‐9/13/\$31.00~\copyright~2013 IEEE}
-%\IEEEpubid{\makebox[\columnwidth]{978‐1‐4799‐0623‐9/13/\$31.00~\copyright~2013 IEEE \hfill} \hspace{\columnsep}\makebox[\columnwidth]{ }} 
+%\IEEEpubid{\makebox[\columnwidth]{978‐1‐4799‐0623‐9/13/\$31.00~\copyright~2013 IEEE \hfill} \hspace{\columnsep}\makebox[\columnwidth]{ }}
 
 % \CopyrightYear{2013}
 % \copyrightdata{978‐1‐4799‐0623‐9/13/\$31.00~\copyright~2013 IEEE}
