--- a/framework.tex
+++ b/framework.tex
@@ -2,18 +2,18 @@
 \label{sec:framework}
 
 \thunote{I have not yet worked on these introductory paragraphs.  Will change next to reflect Divya's comments.}
-The previous section highlights that placing data centers and wind
-farms has obvious impact on the grid trasmission network system. Thus,
-when a service provider is looking for best locations to estabish a
-network of green data centers, the grid operational cost should also
+The previous section highlights that placing datacenters and wind
+farms has obvious impact on the grid transmission network system. Thus,
+when a service provider is looking for best locations to establish a
+network of green datacenters, the grid operational cost should also
 be included as one of the most important factors into
 consideration. Another observation is that co-location of the green
-data center and the green energy plant seems not always be the best
+datacenter and the green energy plant seems not always be the best
 choice. In this case, we try to study how to seek the best locations
-for both the data center and the green energy plant, which are
+for both the datacenter and the green energy plant, which are
 designed to be connected to the same grid network.
 
-By grid-aware placement, we attempt to efficiently select a set of locations for one or more data centers to support a given amount of computational power, as well as one or more green power plants (e.g. solar, wind or others) to provide a given power capacity. The main goal is to minimize the overall cost for data centers, green power plants and also the grid network operation. The next subsections defines some important parameters in the selection procedure. Then, the cost model and the entire optimization problem will be formulated and described.
+By grid-aware placement, we attempt to efficiently select a set of locations for one or more datacenters to support a given amount of computational power, as well as one or more green power plants (e.g. solar, wind or others) to provide a given power capacity. The main goal is to minimize the overall cost for datacenters, green power plants and also the grid network operation. The next subsections defines some important parameters in the selection procedure. Then, the cost model and the entire optimization problem will be formulated and described.
 
 \begin{table}[ht]
 \caption{Framework parameters.  $l$ is a location, and $t$ is a time period.}
@@ -33,8 +33,8 @@ $dcArea$ & land needed per kW of DC compute capacity &  m$^2$/kW \\
 $cLinePow(l)$ & cost to layout power line from $l$ to the closest power plant & \$ \\
 $cLineNet(l)$ & cost to layout optical fiber from $l$ to closest network backbone & \$ \\
 $pBuildDC(c)$ & per kW price of building a datacenter with $c$ power capacity & \$/kW \\
-$serverPow$ & server peak power demand & W/serv \\
-$switchPow$ & switch peak power demand & W/switch \\
+$serverPow$ & server peak power demand & kW/serv \\
+$switchPow$ & switch peak power demand & kW/switch \\
 $servsSwitch$ & number of servers per switch & servs/switch \\
 $pServer$ & price of a server &  \$/serv \\
 $pSwitch$ & price of a network switch & \$/switch \\
@@ -49,7 +49,7 @@ $pBuildWF$ & per kW price of building a wind power plant & \$/kW \\
 $revEnergy(l)$ & revenue for selling wind energy to grid at $l$ & \$/kWh \\
 \hline \hline
 $transLoss(t)$  & avg system transmission loss in grid during $t$ & kW \\
-%$disLoss(t)$ & the losses for distributing power to data center during time epoch $t$ & kW \\
+%$disLoss(t)$ & the losses for distributing power to datacenter during time epoch $t$ & kW \\
 $pTransLoss$ & the price for system transmission losses per kWh & \$/kWh \\
 %$numLineVio(t)$  & the number of line capacity violation during time epoch $t$   &  \#  \\
 %$numVolVio(t)$  & the number of voltage level violation during time epoch $t$  &  \#  \\
@@ -62,9 +62,9 @@ $pTransLoss$ & the price for system transmission losses per kWh & \$/kWh \\
 \subsection{Optimization Framework}
 
 \thunote{Need to integrate this thought below.}
-The problem is set up from the perspective of both IT company and the grid operator, who want to collaborate for building up green datacenters, with the purpose of minimizing the summarized cost including data center cost, green power plant cost and the grid cost.
+The problem is set up from the perspective of both IT company and the grid operator, who want to collaborate for building up green datacenters, with the purpose of minimizing the summarized cost including datacenter cost, green power plant cost and the grid cost.
 
-Table \ref{tab:par_setting} lists the set of parameters in our framework.  Using these parameters, we define the optimization problem shown in Figure~\ref{fig:optimization}.  The objective of this optimization problem is to minimize the total cost ($totalCost$) of building and operating a datacenter of a given size ($dcCapacity$) and a wind farm of a given size ($wfCapacity$).  The datacenter and wind farm can each be place at any location within a set of given locations.  The total cost has three components, the cost of the datacenter ($dcCost$), the cost of the wind farm ($wfCost$), and the cost of losses in the transmission system ($transCost$).
+Table \ref{tab:par_setting} lists the set of parameters in our framework.  Using these parameters, we define the optimization problem shown in Figure~\ref{fig:optimization}.  The objective of this optimization problem is to minimize the total cost ($totalCost$) of building and operating a datacenter of a given size ($dcCapacity$) and a wind farm of a given size ($wfCapacity$). \xynote{In the program, wind farm size is not given but calculated based on the datacenter size and other location-dependent parameters.} The datacenter and wind farm can each be placed at any location within a set of given locations.  The total cost has three components, the cost of the datacenter ($dcCost$), the cost of the wind farm ($wfCost$), and the cost of losses in the transmission system ($transCost$).
 
 \begin{figure*}
 \begin{eqnarray}
@@ -81,7 +81,7 @@ Table \ref{tab:par_setting} lists the set of parameters in our framework.  Using
         nServers & = & dcCapacity / (serverPow + switchPow / servsSwitch)\\
         nSwitches & = & nServers / servsSwitch\\
         dcNetCost & = & nServers \cdot pNBWServ \\
-        dcEnergyCost & = & \sum_{t \in T} {|t| \cdot powNeed(t) \cdot PUE(t) \cdot pEnergy(d) } \\
+        dcEnergyCost & = & \sum_{t \in T} {|t| \cdot powNeed(t) \cdot PUE(d,t) \cdot pEnergy(d) } \\
  	wfCost & = & wfCAPEX - wfRev  \\
         wfCAPEX & = & wfLandCost + wfBuildCost \\
         wfLandCost & = & pLand(w) \cdot wfArea \cdot wfCapacity \\
@@ -95,13 +95,13 @@ Table \ref{tab:par_setting} lists the set of parameters in our framework.  Using
 \end{figure*}
 
 
-\subsubsection{Datacenter} The cost of the datacenter can be broken down into capital ($dcCAPEX$) and operational ($dcOPEX$) components.  The capital costs are those investments made upfront and depreciated over the lifetime of the datacenter.  These costs include the cost for buying land ($dcLandCost$), building the datacenter ($dcBuildCost$), and buying IT equipment ($dcITCost$).  The cost of building the datacenter include datacenter construction cost as well as the costs of laying power and network lines to the datacenter.  IT equipment includes servers and switches.  Land price varies according to location ($pLand(d)$ for location $d$), whereas the other prices do not to a first approximation.  Of course, the total cost of laying the power ($cLinePow(d)$) and network ($cLineNet(d)$) lines depend on location, as the distances to the closest power plant and network backbone are location-dependent.  The datacenter construction cost is typically estimated as a function of the maximum power to be consumed by the datacenter.  This maximum power is that required by the maximum number of servers and network switches when running at 100\% utilization times the maximum expected PUE of the datacenter.  The PUE is computed by dividing the overall power consumption by the power consumption of the computational equipment.  The PUE is higher when temperature and/or humidity are high, since cooling consumes more energy under those conditions.
+\subsubsection{Datacenter} The cost of the datacenter can be broken down into capital ($dcCAPEX$) and operational ($dcOPEX$) components.  The capital costs are those investments made upfront and depreciated over the lifetime of the datacenter.  These costs include the cost for buying land ($dcLandCost$), building the datacenter ($dcBuildCost$), and buying IT equipment ($dcITCost$).  The cost of building the datacenter include datacenter construction cost as well as the costs of laying power and network lines to the datacenter.  IT equipment includes servers and switches.  Land price varies according to location ($pLand(d)$ for location $d$), whereas the other prices do not to a first approximation.  Of course, the total cost of laying the power ($cLinePow(d)$) and network ($cLineNet(d)$) lines depends on location, as the distances to the closest power plant and network backbone are location-dependent.  The datacenter construction cost is typically estimated as a function of the maximum power to be consumed by the datacenter.  This maximum power is that required by the maximum number of servers and network switches when running at 100\% utilization times the maximum expected PUE of the datacenter.  The PUE is computed by dividing the overall power consumption by the power consumption of the computational equipment.  The PUE is higher when temperature and/or humidity are high, since cooling consumes more energy under those conditions.
 
 The operational costs are those incurred during the operation of the datacenter, and include costs for external network bandwidth use ($dcNetCost$) and the grid electricity ($dcEnergyCost$) required to run the datacenter.  (There is also a cost for water, which is currently not considered by can be easily added.)  The electricity cost is computed based on the IT equipment's power demand over time ($powerNeed(t)$), the PUE, and the electricity price.  Both the electricity price and the PUE vary with location.
 
 Finally, lower taxes and one-time incentives are another important component of the cost of a datacenter.  For example, some states in the US lower taxes on datacenters, as they generate employment and wealth around them.  This component depends on the nature of the savings and applies to each cost in a different way.  Although we do not consider this component further, it is easy to add it to our framework.
 
-\subsubsection{Wind farm}  The cost of the wind farm is modeled as the capital cost ($wfCAPEX$) minus the revenue earned by selling the wind energy to the grid ($wfRef$).  We assume that the operational cost of operating the wind farm is low, and so do not consider it here; of course, this cost can be easily added to the framework.  The capital costs include the cost for buying land ($wfLandCost$) and building the wind farm ($wfBuildCost$), which in turn includes the construction cost and the cost of laying the power line from the wind farm to the closest power plant.  The construction cost is assume to be a linear function of the desired power generation capacity.  Note that if the datacenter and wind farm are co-located, then the cost for laying power lines is incurred only once.
+\subsubsection{Wind farm}  The cost of the wind farm is modeled as the capital cost ($wfCAPEX$) minus the revenue earned by selling the wind energy to the grid ($wfRev$).  We assume that the operational cost of operating the wind farm is low, and so do not consider it here; of course, this cost can be easily added to the framework.  The capital costs include the cost for buying land ($wfLandCost$) and building the wind farm ($wfBuildCost$), which in turn includes the construction cost and the cost of laying the power line from the wind farm to the closest power plant.  The construction cost is assumed to be a linear function of the desired power generation capacity.  Note that if the datacenter and wind farm are co-located, then the cost for laying power lines is incurred only once.
 
 The revenue earned by the wind farm is computed over the time period $T$, where the energy generated within any time epoch $t$ in $T$ at location $w$ depends on the efficiency of the wind turbines and the wind speed.  The efficiency of today's wind turbine is close to 50\%.  We capture the efficiency and impact of wind speed in epoch $t$ using the parameter $\beta(w,t)$, which gives the fraction of the wind farm's maximum capacity actually produced during $t$.
 
@@ -114,12 +114,12 @@ The revenue earned by the wind farm is computed over the time period $T$, where 
 
 \thunote{Still need to finish the section.}
 
-The outputs of the problem is the lowest cost found and the corresponding locations for data centers and renewable power plant, as well as the capacity provisioned at each location for data centers or green power plants (if any).
+The outputs of the problem is the lowest cost found and the corresponding locations for datacenters and renewable power plant, as well as the capacity provisioned at each location for datacenters or green power plants (if any).
 
-Equation 1 in Fig.\ref{fig:optimization} shows the optimization objective of our defined problem, i.e. $TotalCost$, where $DC(l)$ and $RE(l,r)$ are booleans indicating whether to place a data center or power plant of type $r$ at location $l$. $DC\_Cost(l)$ , $RE\_Cost(l,r)$ and $Grid\_Cost$ represent the cost for data centers, renewable plants and the power grid system respectively.
+Equation 1 in Figure~\ref{fig:optimization} shows the optimization objective of our defined problem, i.e. $TotalCost$, where $DC(l)$ and $RE(l,r)$ are booleans indicating whether to place a datacenter or power plant of type $r$ at location $l$. $DC\_Cost(l)$ , $RE\_Cost(l,r)$ and $Grid\_Cost$ represent the cost for datacenters, renewable plants and the power grid system respectively.
 
 
-The overall cost should be optimized under the constraints, which are listed in Figure~\ref{fig:constraints}. Equation 21-23 show the constraints of the provisioned capacity for data centers. Equation 24 means that the provisioned capacity for renewable energy plants are determined by the total power demand from the data centers. This constraint is added indicating that the power generation and consumption added to the grid should be balanced from the perspective of the grid system. Furthermore, Equation 26
+The overall cost should be optimized under the constraints, which are listed in Figure~\ref{fig:constraints}. Equation 21-23 show the constraints of the provisioned capacity for datacenters. Equation 24 means that the provisioned capacity for renewable energy plants are determined by the total power demand from the datacenters. This constraint is added indicating that the power generation and consumption added to the grid should be balanced from the perspective of the grid system. Furthermore, Equation 26
 is a strict limitation for keeping the grid out of any violations at any given time $t$, since we assume the grid reliability is crucial and must be guaranteed.
 
 \begin{figure*} [ht]
@@ -127,11 +127,11 @@ is a strict limitation for keeping the grid out of any violations at any given t
 \centering
 \begin{eqnarray}
 \forall_{l \in \mathcal{L}}, capDC(l) \leq DC(l) \cdot CapacityDC
-&\Rightarrow& \text{capacity of data center at $l$ should be zero when $DC(l)$ is 0} \\
+&\Rightarrow& \text{capacity of datacenter at $l$ should be zero when $DC(l)$ is 0} \\
 \sum_{l\in \mathcal{L}}{DC(l)\cdot capDC(l)} = CapacityDC
-&\Rightarrow& \text{total capacity of built data centers should meet the requirement} \\
+&\Rightarrow& \text{total capacity of built datacenters should meet the requirement} \\
 \forall_{t \in T}, demand(l,t) \leq capDC(l)
-&\Rightarrow& \text{power demand of the data center should not exceed its capacity} \\
+&\Rightarrow& \text{power demand of the datacenter should not exceed its capacity} \\
 %\forall_{l \in \mathcal{L},r\in \mathcal{R}}, capRE(l,r) \leq RE(l,r) \cdot CapacityRE  & \Rightarrow &
 %\text{capacity of type $r$ plant at $l$ should be zero if $RE(l,r)$ is 0} \\
 %\sum_{l \in \mathcal{L},r \in \mathcal{R}}{RE(l,r) \cdot capRE(l,r)} = CapacityRE & \Rightarrow &
@@ -153,7 +153,7 @@ is a strict limitation for keeping the grid out of any violations at any given t
 
 \subsection{Optimizing approaches}
 \subsubsection{Semi Brute force}
-A time-consuming approach is to generate all of the possible combinations for data centers and renewable energy plants. However, it is not possible to generate all kinds of capacity provisioning amounts since it's not discrete. Thus, we generate combinations of locations first, and then evenly distribute the total capacity to all of the candidate locations selected. By testing these generated configurations, the approach returns the best one with the lowest total cost. This approach still could be very exhaustive, which needs extremely long time for execution.
+A time-consuming approach is to generate all of the possible combinations for datacenters and renewable energy plants. However, it is not possible to generate all kinds of capacity provisioning amounts since it's not discrete. Thus, we generate combinations of locations first, and then evenly distribute the total capacity to all of the candidate locations selected. By testing these generated configurations, the approach returns the best one with the lowest total cost. This approach still could be very exhaustive, which needs extremely long time for execution.
 
 \subsubsection{Heuristic searching}
 
