--- a/quantify.tex
+++ b/quantify.tex
@@ -1,36 +1,36 @@
-\section{Metric choice: Data center placements in renewable power grid}
+\section{Metric choice: Datacenter placements in renewable power grid}
 \label{sec:quantify}
 %PLEASE INCLUDE THIS/APPROPRIATELY EDITED FORM OF THIS TEXT IN INTRODUCTION%%%%
-%Today many data centers are being powered by renewable energy source like wind and solar. There are two choices of locating the data centers i) near the wind or solar farm, what we refer to as co-location in the paper or ii) away from the renewable energy source (power is transmitted over long distance transmission lines). This paper answers the questions i) how do we decide which of the two is better and ii) how do we plan the data center location if we have multiple choices. In order to decide which one of these choices are better we need to define a comprehensive metric. In this paper we will first define these metrics and justify by considering a realistic scenario of placing data center in the New England system. Later, we provide a planning methodology that can be used to determine the data center location in any electric grid with wind or solar power. Finally, we propose an optimization algorithm that can be used to determine the best data center location under a given set of constraints.
+%Today many datacenters are being powered by renewable energy source like wind and solar. There are two choices of locating the datacenters i) near the wind or solar farm, what we refer to as co-location in the paper or ii) away from the renewable energy source (power is transmitted over long distance transmission lines). This paper answers the questions i) how do we decide which of the two is better and ii) how do we plan the datacenter location if we have multiple choices. In order to decide which one of these choices are better we need to define a comprehensive metric. In this paper we will first define these metrics and justify by considering a realistic scenario of placing datacenter in the New England system. Later, we provide a planning methodology that can be used to determine the datacenter location in any electric grid with wind or solar power. Finally, we propose an optimization algorithm that can be used to determine the best datacenter location under a given set of constraints.
 %%%%%%%
-Planning optimal data center location, requires comprehensive metric definition. Most of the studies carried out so far neglect the impact of renewable powered data centers on the transmission grid. When the penetration of renewable powered data centers was small, the impact of these on the transmission grid was insignificant. However, with several large data center companies opting for renewable energy source it becomes imperative to study their impact on the transmission grid.
+Planning optimal datacenter location, requires comprehensive metric definition. Most of the studies carried out so far neglect the impact of renewable powered datacenters on the transmission grid. When the penetration of renewable powered datacenters was small, the impact of these on the transmission grid was insignificant. However, with several large datacenter companies opting for renewable energy source it becomes imperative to study their impact on the transmission grid.
 
-\subsection{Impact of data center on renewable power grid}
+\subsection{Impact of datacenter on renewable power grid}
 \label{sec:metrics}
-We will show that choosing optimal data center location within the renewable power grid could be beneficial to both the grid operators and the data center owners. Specifically data centers located at strategic places in the grid could help minimize i) overloading of transmission lines; ii) grid voltage variations outside the acceptable range iii) system losses. We will demonstrate this by considering a real world system, i.e., the New England Independent System Operator (ISO) spanning most of North Eastern region of United States and some parts of Canada.
+We will show that choosing optimal datacenter location within the renewable power grid could be beneficial to both the grid operators and the datacenter owners. Specifically datacenters located at strategic places in the grid could help minimize i) overloading of transmission lines; ii) grid voltage variations outside the acceptable range iii) system losses. We will demonstrate this by considering a real world system, i.e., the New England Independent System Operator (ISO) spanning most of North Eastern region of United States and some parts of Canada.
 \subsubsection{Overloading of transmission lines}
-The transmission lines (referred as branch hereafter in the paper) are used to transport power from the large generators to the load. The power carrying capacity is limited to protect the line from over heating, mainly due to the line resistive losses i.e., $I^{2}R$, where I is the current flowing through the branch and R is the resistance of the branch.
+The transmission lines (referred as branch hereafter in the paper) are used to transport power from the large generators to the load. The power carrying capacity is limited to protect the line from over heating, mainly due to the line resistive losses i.e., $I^{2}R$, where $I$ is the current flowing through the branch and $R$ is the resistance of the branch.
 
-A transmission line has typically two ratings: short term and long term capacity rating. During certain wind and system load (including data center load) conditions, some of the transmission lines could get overloaded. If this happens during the normal operation of the electric grid then one of the following will be done: i) if an electronic power flow controller is available then it is used to control the power flow through the overloaded line; or ii) in extreme situations, the overloaded line is disconnected which may result in power supply interruption to the loads.
+A transmission line has typically two ratings: short term and long term capacity rating. During certain wind and system load (including datacenter load) conditions, some of the transmission lines could get overloaded. If this happens during the normal operation of the electric grid then one of the following will be done: i) if an electronic power flow controller is available then it is used to control the power flow through the overloaded line; or ii) in extreme situations, the overloaded line is disconnected which may result in power supply interruption to the loads.
 
-If major transmission lines are getting overloaded quiet often annually then new lines are planned and built. This solution is very expensive and takes a long time (typically 7 to 10 years). The need for such expensive grid retrofits may be minimized by planning the location of the data center.
+If major transmission lines are getting overloaded quiet often annually then new lines are planned and built. This solution is very expensive and takes a long time (typically 7 to 10 years). The need for such expensive grid retrofits may be minimized by planning the location of the datacenter.
 
 \subsubsection{Voltage variation in electric grid}
-The voltage magnitude varies in the electric grid and needs to be maintained within a narrow range (for example +/- 5\% of nominal) so that there is no damaged caused to the sensitive electronic loads. However, sometimes/days the change in renewable power output could cause the voltage to vary beyond the acceptable limits. Such over/under voltage problems can be mitigated by appropriately locating the data center load.
+The voltage magnitude varies in the electric grid and needs to be maintained within a narrow range (for example +/- 5\% of nominal) so that there is no damaged caused to the sensitive electronic loads. However, sometimes/days the change in renewable power output could cause the voltage to vary beyond the acceptable limits. Such over/under voltage problems can be mitigated by appropriately locating the datacenter load.
 
 \subsubsection{System losses}
-Historically, the electric grid was designed to have large central generating stations that are located far away from the load centers. The power from these central sources would be transmitted to the data center over transmission lines. While designing such a grid, the generator location and the transmission line voltage level as well as the path would be optimized to minimize the line losses.However, today with renewable power being distributed the scenario has changed, the generation sources are distributed and they may be located near the load centers. In order to transfer power from these renewable source we still use the existing transmission lines that were planned and built about 50 years ago or earlier. This may result in higher line losses and sub-optimal power transmission between generation sources and loads.  Since we cannot re-design the entire electric grid to minimize line losses, we need to leverage the flexibility we have in locating new loads i.e., data centers in our specific case.
+Historically, the electric grid was designed to have large central generating stations that are located far away from the load centers. The power from these central sources would be transmitted to the datacenter over transmission lines. While designing such a grid, the generator location and the transmission line voltage level as well as the path would be optimized to minimize the line losses.However, today with renewable power being distributed the scenario has changed, the generation sources are distributed and they may be located near the load centers. In order to transfer power from these renewable source we still use the existing transmission lines that were planned and built about 50 years ago or earlier. This may result in higher line losses and sub-optimal power transmission between generation sources and loads. Since we cannot re-design the entire electric grid to minimize line losses, we need to leverage the flexibility we have in locating new loads i.e., datacenters in our specific case.
 
 \subsection{Simulation study}
-In order to study the impact of data center location in a renewable power grid we consider the New England ISO transmission network. We choose this system due to the following reasons:
+In order to study the impact of datacenter location in a renewable power grid we consider the New England ISO transmission network. We choose this system due to the following reasons:
 \begin{itemize}
-\item{Wind power expansion in New England: The system studies carried by the New England ISO state that in this region there is a potential of integrating up to 12 Giga-Watts of wind power. Given this enormous interest to install new wind farms, this region may have a great potential in future to accommodate data centers powered by wind farms.}
+\item{Wind power expansion in New England: The system studies carried by the New England ISO state that in this region there is a potential of integrating up to 12 Giga-Watts of wind power. Given this enormous interest to install new wind farms, this region may have a great potential in future to accommodate datacenters powered by wind farms.}
 \item{Transmission network upgrades: A study carried out by the New England ISO showed that they could potentially integrate wind resources to meet up to 24\% of the region's total annual electric energy needs in 2020 if the system includes transmission
 upgrades. If these transmission upgrades can be limited then the development of new wind farms becomes more economical.}
 \item{Positive impacts of wind power in New England ISO: Introducing large amounts of low-marginal-cost wind generation tended to depress the spot price and reduce the price differential for bulk power between day and night. Also the study results demonstrated that there was only a relatively small increase in the use of existing pumped-storage hydro power for large wind penetrations, largely because the flexible natural-gas-fired generation fleet provided most of the system balancing.}
 \end{itemize}
-We will show in our study, that within the New England ISO, the wind power penetration can be increased much more cost effectively by strategically locating the data center. Intuitively, it may appear that co-locating data center loads and wind farms would solve the problem of building new transmission lines, limit the voltage variation and also minimize losses. However, our study shows that this is not indeed true and co-locating wind farm and data center may not be the optimal solution always.
-\subsubsection{Model of the New England renewable power data center}
+We will show in our study, that within the New England ISO, the wind power penetration can be increased much more cost effectively by strategically locating the datacenter. Intuitively, it may appear that co-locating datacenter loads and wind farms would solve the problem of building new transmission lines, limit the voltage variation and also minimize losses. However, our study shows that this is not indeed true and co-locating wind farm and datacenter may not be the optimal solution always.
+\subsubsection{Model of the New England renewable power datacenter}
 Before we carry out the case studies, we will describe the approximations we made and the models we used for each sub-system we considered in our study.
 \begin{itemize}
 \item{New England transmission system model: \\
@@ -46,20 +46,20 @@ For our study we considered a widely used  \cite{bills1970line} model of the New
 %%%
 }
 
-\item{Data center model: \\
-Based on the geographical mapping we aggregate all the data centers in the New England ISO region into six data centers, each data center for one state. In order to estimate the size of an "aggregated" data center in a certain state, we sue the follow equation:
+\item{Datacenter model: \\
+Based on the geographical mapping we aggregate all the datacenters in the New England ISO region into six datacenters, each datacenter for one state. In order to estimate the size of an "aggregated" datacenter in a certain state, we sue the follow equation:
 
 \begin{equation}
 L_i=\frac{n_i*9.8GW}{1278}
 \end{equation}
 
-\noindent where $L_i$ is the aggregated load of the $i$th state, $n_i$ is the number of datacenters reported in that state,  9.8GW is the upper bound of total electricity used by US datacenters in 2010, according to the report \cite{Koomey2011}, and 1278 is the number of datacenters in US collected and reported in \cite{DCmap}. However, according to \cite{Koomey2011}, for the summarized load of data centers, there is an increase of 56\% from 2005-2010. Hence, we are assuming the increasing percentage from 2010-2014 is 56\%*0.8=45\%, and after adjustment we are using $L'_i=1.45L_i$ as the data center load for the target grid system.
+\noindent where $L_i$ is the aggregated load of the $i$th state, $n_i$ is the number of datacenters reported in that state,  9.8GW is the upper bound of total electricity used by US datacenters in 2010, according to the report \cite{Koomey2011}, and 1278 is the number of datacenters in US collected and reported in \cite{DCmap}. However, according to \cite{Koomey2011}, for the summarized load of datacenters, there is an increase of 56\% from 2005-2010. Hence, we are assuming the increasing percentage from 2010-2014 is 56\%*0.8=45\%, and after adjustment we are using $L'_i=1.45L_i$ as the datacenter load for the target grid system.
 
-The state wise aggregated data centers are mapped to different buses according to their geographical locations, as seen from Table~\ref{tab:dc_setting}. Note that the load size given in the table represents the total load of data centers in the entire state.
+The state wise aggregated datacenters are mapped to different buses according to their geographical locations, as seen from Table~\ref{tab:dc_setting}. Note that the load size given in the table represents the total load of datacenters in the entire state.
 
 \begin{table}[ht]
 \begin{center}
-\caption{Background data center load and location settings}
+\caption{Background datacenter load and location settings}
 \begin{tabular}{|l|l|p{30pt}|p{30pt}|p{30pt}|}
 \hline
 DC No. & State & Number of DCs & Estimated size(MW) & Mapped Bus No.\\
@@ -80,7 +80,7 @@ DC6 & Massachusetts & 27& 300.21 & 4 \\
 }
 
 \item{Wind farm model: \\
-The wind farms connected to bus 18, 28, 36, 37 and 38 (Figure~\ref{fig:newengland}) are lumped models of several wind farms within a geographical region. The locations and capacity settings of the five wind farms are presented in Table~\ref{tab:wf_setting}. We assume that each farm can be represented by $'n$' identical wind turbines, where $n$= total farm rated capacity/individual wind turbine rating. This approximation does not change any of our results because we are interested in studying the global impact of wind farm powered data centers on the electric grid. Also, since most of the wind turbines in this region are the GE 1.5MW machines, we consider the GE machine wind speed versus power characteristics \cite{lei2006modeling}. The wind speed versus turbine output characteristics is commonly referred to as the power curve (Figure~\ref{fig:windcurve}). From Figure~\ref{fig:windcurve} we can see that the cut-in wind speed, i.,e the wind speed at which the turbine starts producing power, is 5m/s and the cut-off wind speed is 25m/s, beyond this the turbine will be shut down for safety reasons. The wind turbine produces rated output (1.5MW) between wind speeds of 13-25m/s.
+The wind farms connected to bus 18, 28, 36, 37 and 38 (Figure~\ref{fig:newengland}) are lumped models of several wind farms within a geographical region. The locations and capacity settings of the five wind farms are presented in Table~\ref{tab:wf_setting}. We assume that each farm can be represented by `$n$' identical wind turbines, where $n$= total farm rated capacity/individual wind turbine rating. This approximation does not change any of our results because we are interested in studying the global impact of wind farm powered datacenters on the electric grid. Also, since most of the wind turbines in this region are the GE 1.5MW machines, we consider the GE machine wind speed versus power characteristics \cite{lei2006modeling}. The wind speed versus turbine output characteristics is commonly referred to as the power curve (Figure~\ref{fig:windcurve}). From Figure~\ref{fig:windcurve} we can see that the cut-in wind speed, i.e., the wind speed at which the turbine starts producing power, is 5m/s and the cut-off wind speed is 25m/s, beyond this the turbine will be shut down for safety reasons. The wind turbine produces rated output (1.5MW) between wind speeds of 13-25m/s.
 %%%
 \begin{figure}[ht]
 \centering
@@ -98,11 +98,11 @@ The wind farms connected to bus 18, 28, 36, 37 and 38 (Figure~\ref{fig:newenglan
 \hline
 WF No. & Bus No. & State & Capacity(MW) \\
 \hline
-WF1 & 18& ? & 100\\
-WF2 & 28& ? & 90 \\
+WF1 & 18& \xynote{?} & 100\\
+WF2 & 28& \xynote{?} & 90 \\
 WF3 & 36& Vermont & 90  \\
 WF4 & 37& Maine & 90\\
-WF5 & 30& Massachusetts(?) & 90\\
+WF5 & 30& Massachusetts(\xynote{?}) & 90\\
 \hline
 
 \end{tabular}
@@ -113,14 +113,14 @@ WF5 & 30& Massachusetts(?) & 90\\
 }
 \end{itemize}
 \subsection{Case study}
-We have used the above described model and carried out the following case studies to assess the impact of data center location on the renewable power grid.
+We have used the above described model and carried out the following case studies to assess the impact of datacenter location on the renewable power grid.
 \begin{itemize}
 \item{Case 1: Existing New England system}
-\item{Case 2: New England system with one additional data center (co-located with a wind farm)}
-\item{Case 3: New England system with one additional data center (located away from the wind farm)}
+\item{Case 2: New England system with one additional datacenter (co-located with a wind farm)}
+\item{Case 3: New England system with one additional datacenter (located away from the wind farm)}
 \end{itemize}
 For assessing the impact, we use the three metrics described earlier (section \ref{sec:metrics}) and calculate the system losses, power flows through the transmission lines and the bus voltages.
-The system losses, line flows and the bus voltages are calculated by solving the power flow or loadflow equations. The loadflow equations mathematically model the power balance (i.e net load +losses = total generation in the electric grid). Within an electric grid the power can be easily measured at the loads and at generators. Also, some generators have the capability to regulate the voltage at a bus at a constant preset reference value. The power flow equations are used to calculate the bus voltages (magnitude and angle), for a given network and a set of load and generation powers. The loadflow equation for a generic $n$ bus network with $k$ branches is given below.
+The system losses, line flows and the bus voltages are calculated by solving the power flow or loadflow equations. The loadflow equations mathematically model the power balance (i.e., net load +losses = total generation in the electric grid). Within an electric grid the power can be easily measured at the loads and at generators. Also, some generators have the capability to regulate the voltage at a bus at a constant preset reference value. The power flow equations are used to calculate the bus voltages (magnitude and angle), for a given network and a set of load and generation powers. The loadflow equation for a generic $n$ bus network with $k$ branches is given below.
 \begin{equation}
 P_{i} = \Sigma_{j=1}^{n}(|Y_{ij}||V_{i}||V_{j}|cos(\theta_{ij}+\delta_{j}-\delta_{i})
 \end{equation}
@@ -136,7 +136,7 @@ For a given power $P_{i}$ and $Q_{i}$ at the $i^{th}$ load bus, the above powerf
 %3. voltage violations if any (bus number)
 %%%
 
-Here, we show the simulation results of the three cases and give some discussion about them. First, the total system losses are compared over the three cases under the condition of three wind speed settings, as shown in Figure~\ref{fig:loss-cases}. The background load of the electricity grid is set to normal (6254MW in total,summarized over all the buses), as described previously. Three categories of wind speed settings are: LOW (4-6m/s), MEDIUM (7-11m/s), and HIGH ($>$11m/s). The size of the additional data center in Case 2\&3 is set to 200MW. Specifically, for Case 2 the data center is located at bus 18 (co-located with wind farm 1) and for Case 3 the data center is located at bus 10 (away from all wind farms).
+Here, we show the simulation results of the three cases and give some discussion about them. First, the total system losses are compared over the three cases under the condition of three wind speed settings, as shown in Figure~\ref{fig:loss-cases}. The background load of the electricity grid is set to normal (6254MW in total,summarized over all the buses), as described previously. Three categories of wind speed settings are: LOW (4-6m/s), MEDIUM (7-11m/s), and HIGH ($>$11m/s). The size of the additional datacenter in Case 2\&3 is set to 200MW. Specifically, for Case 2 the datacenter is located at bus 18 (co-located with wind farm 1) and for Case 3 the datacenter is located at bus 10 (away from all wind farms).
 
 \begin{figure}[ht]
 \centering
@@ -145,9 +145,9 @@ Here, we show the simulation results of the three cases and give some discussion
 \label{fig:loss-cases}
 \end{figure}
 
-By comparing the values of system losses from Fig. \ref{fig:loss-cases}, it can be observed that the co-location case (Case 2) could lead to more losses than Case 1 and Case 3. Take MEDIUM setting for example, the system losses of Case 3 is about 6\% less than Case 2, which illustrates system loss can be reduced by placing the data center correctly and co-location is not necessarily the best choice.
+By comparing the values of system losses from Figure~\ref{fig:loss-cases}, it can be observed that the co-location case (Case 2) could lead to more losses than Case 1 and Case 3. Take MEDIUM setting for example, the system losses of Case 3 is about 6\% less than Case 2, which illustrates system loss can be reduced by placing the datacenter correctly and co-location is not necessarily the best choice.
 
-Next,in order to investigate the impact of data center placement on line capacity violations and voltage violations, we change the scenario to peak system load (6885MW in total) and conduct the experiments again. Evaluation results are illustrated in Table \ref{tab:results-linevio}, which shows that there is one overloaded branch from bus 4 to bus 5 in Case 2. This highlights that different placement choice of the additional data center can make some particular lines overloaded. During our experiments, although there are only a few cases where lines are overloaded, annually the number of times and how long these over-loads could occur depends on the frequency and duration of occurrence of a particular wind speed and load condition. If it is too frequent or more persistent then the over-loads could be a serious problem and might require building new transmission lines. \xynote{need to add costs of building new line? I haven't found the reference yet.}
+Next,in order to investigate the impact of datacenter placement on line capacity violations and voltage violations, we change the scenario to peak system load (6885MW in total) and conduct the experiments again. Evaluation results are illustrated in Table \ref{tab:results-linevio}, which shows that there is one overloaded branch from bus 4 to bus 5 in Case 2. This highlights that different placement choice of the additional datacenter can make some particular lines overloaded. During our experiments, although there are only a few cases where lines are overloaded, annually the number of times and how long these over-loads could occur depends on the frequency and duration of occurrence of a particular wind speed and load condition. If it is too frequent or more persistent then the over-loads could be a serious problem and might require building new transmission lines. According to \cite{interconnection2010survey}, the estimated cost of building new transmission lines of 345kV voltage level is about \$2.5 Million/mile, which is very expensive with total costs in the billions of dollars. Hence, it's important to choose the right place for datacenters in order to mitigate line over-loading occurrences.
 
 
 \begin{table}[ht]
@@ -169,5 +169,5 @@ Case No. & \# of overloaded lines & List of Overloaded Lines \\
 \end{center}
 \end{table}
 
-Even though we have provided one set of results for a particular set of condition, we have simulated different wind speed and load conditions. We found that in general the system loss magnitude could change. However, in most cases we saw that co-location is not the optimal choice for minimum system loss. In Section \ref{sec:framework} we will describe a method for determining the data center location that will correspond to minimal system loss annually and will cover all the wind speed and system load conditions.
+Even though we have provided one set of results for a particular set of condition, we have simulated different wind speed and load conditions. We found that in general the system loss magnitude could change. However, in most cases we saw that co-location is not the optimal choice for minimum system loss. In Section \ref{sec:framework} we will describe a method for determining the datacenter location that will correspond to minimal system loss annually and will cover all the wind speed and system load conditions.
 
