add results of voltage violations

--- a/paper.tex
+++ b/paper.tex
@@ -36,6 +36,8 @@
 
 \newcommand{\myparagraph}[1]{\noindent {\bf #1}}
 
+\newcommand{\tabincell}[2]{\begin{tabular}{@{}#1@{}}#2\end{tabular}}
+
 % redefine enumerate env for closer spacing
 % \renewenvironment{itemize}%
 %   {\begin{list}{$\bullet$}%
