--- a/framework.tex
+++ b/framework.tex
@@ -64,7 +64,8 @@ $pTransLoss$ & the price for system transmission losses per kWh & \$/kWh \\
 \thunote{Need to integrate this thought below.}
 The problem is set up from the perspective of both IT company and the grid operator, who want to collaborate for building up green datacenters, with the purpose of minimizing the summarized cost including datacenter cost, green power plant cost and the grid cost.
 
-Table \ref{tab:par_setting} lists the set of parameters in our framework.  Using these parameters, we define the optimization problem shown in Figure~\ref{fig:optimization}.  The objective of this optimization problem is to minimize the total cost ($totalCost$) of building and operating a datacenter of a given size ($dcCapacity$) and a wind farm of a given size ($wfCapacity$). \xynote{In the program, wind farm size is not given but calculated based on the datacenter size and other location-dependent parameters.} The datacenter and wind farm can each be placed at any location within a set of given locations.  The total cost has three components, the cost of the datacenter ($dcCost$), the cost of the wind farm ($wfCost$), and the cost of losses in the transmission system ($transCost$).
+Table \ref{tab:par_setting} lists the set of parameters in our framework.  Using these parameters, we define the optimization problem shown in Figure~\ref{fig:optimization}.  The objective of this optimization problem is to minimize the total cost ($totalCost$) of building and operating a datacenter of a given size ($dcCapacity$) and a wind farm of a given size ($wfCapacity$). %\xynote{In the program, wind farm size is not given but calculated based on the datacenter size and other location-dependent parameters.}
+The datacenter and wind farm can each be placed at any location within a set of given locations.  The total cost has three components, the cost of the datacenter ($dcCost$), the cost of the wind farm ($wfCost$), and the cost of losses in the transmission system ($transCost$).
 
 \begin{figure*}
 \begin{eqnarray}
