modified according to Divya's comments

--- a/abstract.tex
+++ b/abstract.tex
@@ -3,7 +3,7 @@
   Due to the growing concern for huge energy consumption, Internet service providers tend
   to build data centers with renewable energy support to reduce cost and the carbon footprint.
   Prior work about ``green'' data center placement issues didn't consider the potential impact
-  on the electricity grid by penetrating large loads and intermittent power generations from renewable
+  on the electric grid by penetrating large loads and intermittent power generations from renewable
   resources. In this paper, we propose a holistic framework which incorporates together the cost of data centers,
   renewable energy power plants and the utility grid. By considering various factors such as land, building, hardware
   costs as well as the losses on the grid network, we try to solve an optimization problem to minimize the overall cost for both service providers and utility grid operators. \xynote{As discussed, we are assuming that the IT service provider want to build data centers and also renewable power plants to support these datacenters.} Our results show that losses of the regional grid would have remarkable effect on the decision of selecting locations for data centers and renewable energy power plants. Furthermore, co-location choices for distribution load generation sources and loads as datacenters are not always better, even comparing only the losses on the grid, which is quite not intuitive. Our work gives a way to seek for optimal locations in the capacity planning stage and also shows the importance for cloud service companies and grid operators to collaborate for reduction of overall cost.
