--- a/intro.tex
+++ b/intro.tex
@@ -3,9 +3,9 @@
 
 As reported recently, the energy consumption of datacenters keeps growing while more and more enterprises and organizations are building their own datacenters\cite{urgaonkar2011optimal,Koomey2011}. The increasing speed of the datacenter energy consumption is approximately 10-12\% per year recently \cite{ghatikar2014demand}. The carbon emission and environment pollution issues attract insights of seeking for clean energy resources. Many IT companies such as Google\cite{GoogleGreen}, Apple\cite{Apple13}, and McGrawHill\cite{McGrawHill11} are trying to build their datacenters together with renewable energy power plants.
 
-Usually, generation of sustainable energy like solar and wind will be closely related to the weather condition at certain locations. As far as we know, there might be different choices for building the datacenter and the power plants. Both on-site and off-site generation are possible approaches \cite {Goiri13}. By grid-centric approaches, the renewable energy will be generated at locations with sufficient renewable sources and pumped into the grid. On the other hand, co-location and self-generation approaches sit the datacenter and the power plant at the same location to facilitate management and avoid long-distance losses. Since it seems no approach is perfect, we argue that companies essentially expect benefits from the investments by building up datacenters and green power plants. However, since the renewable energy generation is mostly intermittent and sometimes might bring great penetration current into the electricity grid, the capacity should be carefully planned and will be limited from the perspective of grid operators. For example, some tiny failures may make an area of grid system completely out of power \cite{nytimes2014}.
+Usually, generation of sustainable energy like solar and wind will be closely related to the weather condition at certain locations. As far as we know, there might be different choices for building the datacenter and the power plants. Both on-site and off-site generation are possible approaches \cite {Goiri13}. By grid-centric approaches, the renewable energy will be generated at locations with sufficient renewable sources and pumped into the grid. On the other hand, co-location and self-generation approaches sit the datacenter and the power plant at the same location to facilitate management and avoid long-distance losses. Since it seems no approach is perfect, we argue that companies essentially expect benefits from the investments by building up datacenters and green power plants. However, since the renewable energy generation is mostly intermittent and sometimes might bring great penetration current into the electric grid, the capacity should be carefully planned and will be limited from the perspective of grid operators. For example, some tiny failures may make an area of grid system completely out of power \cite{nytimes2014}.
 
-Since datacenters are becoming quite large loads for the electricity grid, they are supposed to have a significant impact on the operation of power grid \cite{haowang2014grid}. Large datacenter loads might increase the grid load and also lead to significant load variability of the electricity system. Especially, the emergence of the renewable energy sources with intermittent nature brings fluctuations onto the electricity networks. Furthermore, grid losses are on of the largest expenses for the power system operators \cite{de2014investigation}. EIA (U.S. Energy Information Administration) \cite{EIA} has estimated that the electricity transmission and distribution losses all over the U.S. is about 6\% of the electricity that is transmitted and distributed each year (averaged from 1990 to 2012). Thus, reduction of these losses for the grid can greatly affect the total operational costs.
+Since datacenters are becoming quite large loads for the electric grid, they are supposed to have a significant impact on the operation of power grid \cite{haowang2014grid}. Large datacenter loads might increase the grid load and also lead to significant load variability of the electricity system. Especially, the emergence of the renewable energy sources with intermittent nature brings fluctuations onto the electricity networks. Furthermore, grid losses are on of the largest expenses for the power system operators \cite{de2014investigation}. EIA (U.S. Energy Information Administration) \cite{EIA} has estimated that the electricity transmission and distribution losses all over the U.S. is about 6\% of the electricity that is transmitted and distributed each year (averaged from 1990 to 2012). Thus, reduction of these losses for the grid can greatly affect the total operational costs.
 
 In this case, companies who want to build datacenters with either on-site or off-site renewable energy plants have to get the permission from the grid operators first in order to reduce the unexpected influence to the grid operation. Since the grid losses will also finally turn into expenses for end-users, service providers may want to collaborate with grid operators to minimize the overall cost when planning locations and capacity for the datacenters. In the current literature, datacenter placement issues have been mentioned in some prior work\cite{Goiri11place,Dalger05,Boley09,larumbe2012optimal}, and there are also some research focused on the capacity planning of green datacenters \cite{Le10,berral2014building}. Nevertheless, these work hasn't considered the impact of datacenter placement on the grid itself, which might also lead to comparable costs as other costs for datacenters.
 
